<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_layout_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/forgot_password_activity_constraint_layout_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/group10280_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/forgot_password_activity_group10280_constraint_layout_height"
		android:layout_marginEnd="@dimen/forgot_password_activity_group10280_constraint_layout_margin_end"
		android:layout_marginStart="@dimen/forgot_password_activity_group10280_constraint_layout_margin_start"
		android:layout_marginTop="@dimen/forgot_password_activity_group10280_constraint_layout_margin_top"
		app:layout_constraintHorizontal_weight="2.95"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="-80dp"
		tools:layout_editor_absoluteY="-37dp">
	
		<ImageView
			android:id="@+id/group9721_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:scaleType="centerCrop"
			android:src="@drawable/group_9721_2"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="0dp"/>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/group9704_constraint_layout"
			android:layout_width="@dimen/forgot_password_activity_group9704_constraint_layout_width"
			android:layout_height="@dimen/forgot_password_activity_group9704_constraint_layout_height"
			android:layout_marginStart="@dimen/forgot_password_activity_group9704_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/forgot_password_activity_group9704_constraint_layout_margin_top"
			android:background="@color/forgot_password_activity_group9704_constraint_layout_background_color"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/confirm_your_email_atext_view"
			tools:layout_editor_absoluteX="101dp"
			tools:layout_editor_absoluteY="606dp">
		
			<TextView
				android:id="@+id/email_address_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/forgot_password_activity_email_address_text_view_margin_start"
				android:gravity="start"
				android:letterSpacing="0"
				android:text="@string/forgot_password_activity_email_address_text_view_text"
				android:textColor="@color/forgot_password_activity_email_address_text_view_text_color"
				android:textSize="@dimen/forgot_password_activity_email_address_text_view_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="20dp"
				tools:layout_editor_absoluteY="19dp"/>
		</android.support.constraint.ConstraintLayout>
	
		<TextView
			android:id="@+id/forgot_password_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/forgot_password_activity_forgot_password_text_view_margin_start"
			android:layout_marginTop="@dimen/forgot_password_activity_forgot_password_text_view_margin_top"
			android:gravity="center"
			android:letterSpacing="0.01"
			android:text="@string/forgot_password_activity_forgot_password_text_view_text"
			android:textColor="@color/forgot_password_activity_forgot_password_text_view_text_color"
			android:textSize="@dimen/forgot_password_activity_forgot_password_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="143dp"
			tools:layout_editor_absoluteY="489dp"/>
	
		<TextView
			android:id="@+id/otp_will_be_sent_to_text_view"
			android:layout_width="@dimen/forgot_password_activity_otp_will_be_sent_to_text_view_width"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/forgot_password_activity_otp_will_be_sent_to_text_view_margin_bottom"
			android:gravity="center"
			android:letterSpacing="0"
			android:lineSpacingMultiplier="0.98"
			android:text="@string/forgot_password_activity_otp_will_be_sent_to_text_view_text"
			android:textColor="@color/forgot_password_activity_otp_will_be_sent_to_text_view_text_color"
			android:textSize="@dimen/forgot_password_activity_otp_will_be_sent_to_text_view_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="101dp"
			tools:layout_editor_absoluteY="776dp"/>
	
		<TextView
			android:id="@+id/confirm_your_email_atext_view"
			android:layout_width="@dimen/forgot_password_activity_confirm_your_email_atext_view_width"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/forgot_password_activity_confirm_your_email_atext_view_margin_start"
			android:layout_marginTop="@dimen/forgot_password_activity_confirm_your_email_atext_view_margin_top"
			android:gravity="center"
			android:letterSpacing="0"
			android:text="@string/forgot_password_activity_confirm_your_email_atext_view_text"
			android:textColor="@color/forgot_password_activity_confirm_your_email_atext_view_text_color"
			android:textSize="@dimen/forgot_password_activity_confirm_your_email_atext_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/forgot_password_text_view"
			tools:layout_editor_absoluteX="-228dp"
			tools:layout_editor_absoluteY="552dp"/>
	
		<View
			android:id="@+id/bg_constraint_layout"
			android:layout_width="@dimen/forgot_password_activity_bg_constraint_layout_width"
			android:layout_height="@dimen/forgot_password_activity_bg_constraint_layout_height"
			android:layout_marginStart="@dimen/forgot_password_activity_bg_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/forgot_password_activity_bg_constraint_layout_margin_top"
			android:background="@color/forgot_password_activity_bg_constraint_layout_background_color"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/group9704_constraint_layout"
			tools:layout_editor_absoluteX="101dp"
			tools:layout_editor_absoluteY="686dp"/>
	
		<TextView
			android:id="@+id/set_temperature_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/forgot_password_activity_set_temperature_text_view_margin_start"
			android:layout_marginTop="@dimen/forgot_password_activity_set_temperature_text_view_margin_top"
			android:gravity="center"
			android:letterSpacing="0"
			android:text="@string/forgot_password_activity_set_temperature_text_view_text"
			android:textColor="@color/forgot_password_activity_set_temperature_text_view_text_color"
			android:textSize="@dimen/forgot_password_activity_set_temperature_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/group9704_constraint_layout"
			tools:layout_editor_absoluteX="246dp"
			tools:layout_editor_absoluteY="702dp"/>
	</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>