<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_layout_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/login_activity_constraint_layout_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/group9724_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/login_activity_group9724_constraint_layout_height"
		android:layout_marginEnd="@dimen/login_activity_group9724_constraint_layout_margin_end"
		android:layout_marginStart="@dimen/login_activity_group9724_constraint_layout_margin_start"
		android:layout_marginTop="@dimen/login_activity_group9724_constraint_layout_margin_top"
		app:layout_constraintHorizontal_weight="1.61"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="-81dp"
		tools:layout_editor_absoluteY="-37dp">
	
		<ImageView
			android:id="@+id/group9721_image_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:scaleType="centerCrop"
			android:src="@drawable/group_9721"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="0dp"/>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/group9722_constraint_layout"
			android:layout_width="@dimen/login_activity_group9722_constraint_layout_width"
			android:layout_height="@dimen/login_activity_group9722_constraint_layout_height"
			android:layout_marginStart="@dimen/login_activity_group9722_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/login_activity_group9722_constraint_layout_margin_top"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/login_text_view"
			tools:layout_editor_absoluteX="101dp"
			tools:layout_editor_absoluteY="544dp">
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/group9667_constraint_layout"
				android:layout_width="0dp"
				android:layout_height="@dimen/login_activity_group9667_constraint_layout_height"
				android:background="@color/login_activity_group9667_constraint_layout_background_color"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_weight="1"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="160dp">
			
				<TextView
					android:id="@+id/set_temperature_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/login_activity_set_temperature_text_view_margin_top"
					android:gravity="center"
					android:letterSpacing="0"
					android:text="@string/login_activity_set_temperature_text_view_text"
					android:textColor="@color/login_activity_set_temperature_text_view_text_color"
					android:textSize="@dimen/login_activity_set_temperature_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="144dp"
					tools:layout_editor_absoluteY="16dp"/>
			</android.support.constraint.ConstraintLayout>
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/group9718_constraint_layout"
				android:layout_width="0dp"
				android:layout_height="@dimen/login_activity_group9718_constraint_layout_height"
				app:layout_constraintHorizontal_weight="1"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp">
			
				<android.support.constraint.ConstraintLayout
					android:id="@+id/group9704_constraint_layout"
					android:layout_width="0dp"
					android:layout_height="@dimen/login_activity_group9704_constraint_layout_height"
					android:layout_marginEnd="@dimen/login_activity_group9704_constraint_layout_margin_end"
					android:background="@color/login_activity_group9704_constraint_layout_background_color"
					app:layout_constraintHorizontal_weight="1"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="0dp">
				
					<TextView
						android:id="@+id/email_address_text_view"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="@dimen/login_activity_email_address_text_view_margin_start"
						android:gravity="start"
						android:letterSpacing="0"
						android:text="@string/login_activity_email_address_text_view_text"
						android:textColor="@color/login_activity_email_address_text_view_text_color"
						android:textSize="@dimen/login_activity_email_address_text_view_text_size"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:layout_editor_absoluteX="20dp"
						tools:layout_editor_absoluteY="19dp"/>
				</android.support.constraint.ConstraintLayout>
			
				<android.support.constraint.ConstraintLayout
					android:id="@+id/group9705_constraint_layout"
					android:layout_width="0dp"
					android:layout_height="@dimen/login_activity_group9705_constraint_layout_height"
					android:background="@color/login_activity_group9705_constraint_layout_background_color"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintHorizontal_weight="1"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="79dp">
				
					<android.support.constraint.ConstraintLayout
						android:id="@+id/hide_constraint_layout"
						android:layout_width="@dimen/login_activity_hide_constraint_layout_width"
						android:layout_height="@dimen/login_activity_hide_constraint_layout_height"
						android:layout_marginEnd="@dimen/login_activity_hide_constraint_layout_margin_end"
						android:alpha="0.5"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:layout_editor_absoluteX="292dp"
						tools:layout_editor_absoluteY="20dp">
					
						<ImageView
							android:id="@+id/group9205_image_view"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:scaleType="center"
							android:src="@drawable/group_9205"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintHorizontal_weight="1"
							app:layout_constraintLeft_toLeftOf="parent"
							app:layout_constraintRight_toRightOf="parent"
							app:layout_constraintTop_toTopOf="parent"
							tools:layout_editor_absoluteX="0dp"
							tools:layout_editor_absoluteY="0dp"/>
					
						<ImageView
							android:id="@+id/group9207_image_view"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginStart="@dimen/login_activity_group9207_image_view_margin_start"
							android:scaleType="center"
							android:src="@drawable/group_9207"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintHorizontal_weight="0.62"
							app:layout_constraintLeft_toLeftOf="parent"
							app:layout_constraintRight_toRightOf="parent"
							app:layout_constraintTop_toTopOf="parent"
							tools:layout_editor_absoluteX="9dp"
							tools:layout_editor_absoluteY="3dp"/>
					
						<ImageView
							android:id="@+id/group9209_image_view"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="@dimen/login_activity_group9209_image_view_margin_end"
							android:layout_marginStart="@dimen/login_activity_group9209_image_view_margin_start"
							android:layout_marginTop="@dimen/login_activity_group9209_image_view_margin_top"
							android:scaleType="center"
							android:src="@drawable/group_9209"
							app:layout_constraintHorizontal_weight="0.21"
							app:layout_constraintLeft_toLeftOf="parent"
							app:layout_constraintRight_toRightOf="parent"
							app:layout_constraintTop_toTopOf="parent"
							tools:layout_editor_absoluteX="12dp"
							tools:layout_editor_absoluteY="6dp"/>
					</android.support.constraint.ConstraintLayout>
				
					<TextView
						android:id="@+id/password_text_view"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="@dimen/login_activity_password_text_view_margin_start"
						android:gravity="start"
						android:letterSpacing="0"
						android:text="@string/login_activity_password_text_view_text"
						android:textColor="@color/login_activity_password_text_view_text_color"
						android:textSize="@dimen/login_activity_password_text_view_text_size"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:layout_editor_absoluteX="20dp"
						tools:layout_editor_absoluteY="21dp"/>
				</android.support.constraint.ConstraintLayout>
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	
		<TextView
			android:id="@+id/login_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/login_activity_login_text_view_margin_start"
			android:layout_marginTop="@dimen/login_activity_login_text_view_margin_top"
			android:gravity="center"
			android:letterSpacing="0.01"
			android:text="@string/login_activity_login_text_view_text"
			android:textColor="@color/login_activity_login_text_view_text_color"
			android:textSize="@dimen/login_activity_login_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="227dp"
			tools:layout_editor_absoluteY="466dp"/>
	
		<TextView
			android:id="@+id/forgot_password_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/login_activity_forgot_password_text_view_margin_bottom"
			android:layout_marginStart="@dimen/login_activity_forgot_password_text_view_margin_start"
			android:gravity="start"
			android:letterSpacing="0"
			android:text="@string/login_activity_forgot_password_text_view_text"
			android:textColor="@color/login_activity_forgot_password_text_view_text_color"
			android:textSize="@dimen/login_activity_forgot_password_text_view_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:layout_editor_absoluteX="202dp"
			tools:layout_editor_absoluteY="794dp"/>
	</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>